# vscode-feature-scout

./: .gitignore  README.md  README.ru.md  pyproject.toml
.github/workflows/: ci.yml
docs/: example-project-profile.md
src/vscode_feature_scout/: __init__.py  cli.py  launchd.py  watch.py
tests/: test_cli.py  test_launchd.py
